Cascading Change Log

unreleased (wip 1.1)

  Added c.t.GlobHfs c.t.Tap type that accepts Hadoop style globbing syntax. This allows multiple files that match
  a given pattern to be used as the sources to a Flow.

  Added c.o.s.State and c.o.s.Counter helper operations that respectively set 'state' and increment counters.

  Added c.f.FlowProcess#setStatus method to allow for text status messages to be posted.

  Added c.o.a.AssertNotEquals assertion type.

  Removed planner restriction that traps must not cross map/reduce boundaries. This allows for a single c.t.Tap
  trap to be used across a whole branch, regardless of underlying topology.

  Added new c.t.Field field set type named Fields.SWAP. Can only be used as a result selector. Specifies operation
  results will replace the argument fields. The remaining input fields will remain intact.

  Deprecated c.t.SinkMode#APPEND and replaced with c.t.SinkMode#UPDATE.

  Added c.t.MultiSinkTap to allow for simultaneous writes to multiple unique locations.

  Added support for compression of c.t.SpillableTupleList by default in order to speed up c.p.CoGrouping operations
  where there are very large numbers of values per grouping key.

  Added c.o.f.SetValue function for setting values based on the result of a c.o.Filter instance.

  Added support for configuring polling interval of job status via c.f.h.MultiMapReducePlanner.

  Added c.f.h.MultiMapReducePlanner optimization to detect 'equivalent' adjacent c.t.Tap instances in a c.f.Flow.
  This can drastically reduce the number of jobs when there are intermediate sinks between pipe assemblies.
  If the taps are not compatible, a job will be inserted to convert the temp tap data to the sink format.

  Added support for 'safe' c.o.Operations. By default Operations are safe, that is, they have no side-effects, or
  if they do, they are idempotent. Non-safe operations are treated differently by the c.f.h.MultiMapReducePlanner.
