@@ -21,10 +21,10 @@
 
 package cascading.stats;
 
+import cascading.cascade.Cascade;
+
 import java.util.LinkedList;
 import java.util.List;
-
-import cascading.cascade.Cascade;
 
 /** Class Cascadetats collects {@link Cascade} specific statistics. */
 public class CascadeStats extends CascadingStats
@@ -50,6 +50,17 @@ public class CascadeStats extends CascadingStats
   public int getFlowCount()
     {
     return flowStatsList.size();
+    }
+
+  @Override
+  public long getCounter( Enum counter )
+    {
+    long value = 0;
+
+    for( FlowStats flowStats : flowStatsList )
+      value += flowStats.getCounter( counter );
+
+    return value;
     }
 
   @Override
