@@ -23,12 +23,19 @@ package cascading.stats;
 
 import cascading.flow.Flow;
 
+import java.util.ArrayList;
+import java.util.List;
+
 
 /** Class FlowStats collects {@link Flow} specific statistics. */
 public class FlowStats extends CascadingStats
   {
-  /** Field stepsCount */
-  int stepsCount;
+  List<StepStats> stepStatsList = new ArrayList<StepStats>();
+
+  public void addStepStats( StepStats stepStats )
+    {
+    stepStatsList.add( stepStats );
+    }
 
   /**
    * Method getStepsCount returns the number of steps this Flow executed.
@@ -37,23 +44,24 @@ public class FlowStats extends CascadingStats
    */
   public int getStepsCount()
     {
-    return stepsCount;
+    return stepStatsList.size();
     }
 
-  /**
-   * Method setStepsCount sets the steps value.
-   *
-   * @param stepsCount the stepsCount of this FlowStats object.
-   */
-  public void setStepsCount( int stepsCount )
+  @Override
+  public long getCounter( Enum counter )
     {
-    this.stepsCount = stepsCount;
+    long value = 0;
+
+    for( StepStats step : stepStatsList )
+      value += step.getCounter( counter );
+
+    return value;
     }
 
   @Override
   protected String getStatsString()
     {
-    return super.getStatsString() + ", stepsCount=" + stepsCount;
+    return super.getStatsString() + ", stepsCount=" + getStepsCount();
     }
 
   @Override
